apps/base/media/tautulli-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  labels:
    app.kubernetes.io/name: tautulli
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tautulli
  ports:
    - name: http
      port: 8181
      targetPort: http
